# mimalloc

./: CMakeLists.txt  readme.md
.github/: CODEOWNERS  build-and-publish-mimalloc.yml  renovate.json5
.github/workflows/: build-and-publish-mimalloc.yml
include/: mimalloc-internal.h  mimalloc-types.h
mlock_test/: CMakeLists.txt  mlock_test.c  mlock_test_basic.c  mlock_test_large.c  mlock_test_reset.c  mlock_test_thread.c
src/: alloc.c  init.c  os.c  page.c  segment.c
